changement des pages html

--- a/projet09/index.html
+++ b/projet09/index.html
@@ -25,24 +25,6 @@
 
 <body bgcolor="pink">
 
-
-	<!-- debut header -->
-
-
-	<!------ Include the above in your HEAD tag ---------->
-
-	<!-- 
-<div class="bs-example">
-    <nav class="nav">
-        <a href="#" class="nav-item nav-link active">Accueil</a>
-        <a href="#" class="nav-item nav-link">A propos</a>
-        <a href="#" class="nav-item nav-link">Competences</a>
-        <a href="#" class="nav-item nav-link">Réalisation</a>
-        <a href="#" class="nav-item nav-link disabled" tabindex="-1">Contact</a>
-    </nav> -->
-	<!-- <i class=" fa fa-male fa-10x "> </i> -->
-	</div>
-
 	<div class="text">
 		MARTIN CLAUDE DIATTA
 	</div>
@@ -82,10 +64,10 @@
 	<!-- MENU OF THE YEAR -->
 	<div id="lien">
 		<button><a href="index.html">accueil</a></button>
-		<button><a href="propos.html">a propos</a></button>
-		<button><a href="competences.html">competences</a></button>
-		<button><a href="contact.html">Contact</a></button>
-		<button><a href="CV.pdf">mon cv</a></button>
+		<button><a href="pages/propos.html">a propos</a></button>
+		<button><a href="pages/competences.html">competences</a></button>
+		<button><a href="pages/contact.html">Contact</a></button>
+		<button><a href="#">mon cv</a></button>
 
 	</div>
 	<!-- END OF MENU OF THE YEAR -->
