changement d'emplacement des fichiers css et icones

--- a/projet09/index.html
+++ b/projet09/index.html
@@ -20,11 +20,9 @@
 	<link rel="stylesheet" type="text/css"
 		href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
 </head>
 
 <body bgcolor="pink">
-
 	<div class="text">
 		MARTIN CLAUDE DIATTA
 	</div>
@@ -100,7 +98,7 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
 
-						<p class="h6">Copyright © 2020 tous les droits sont réservés Martin DIATTA</p>
+						<p class="h6">Copyright © 2020 tous  droits réservés Martin DIATTA</p>
 					</div>
 					</hr>
 				</div>
