--- a/projet09/pages/competences.html
+++ b/projet09/pages/competences.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
@@ -65,8 +65,7 @@
 		 	<button><a href="propos.html">a propos</a></button>
 		 	<button><a href="competences.html">competences</a></button>
 		 	<button><a href="contact.html">Contact</a></button>
-		 	<button><a href="CV.pdf">cv</a></button>
-		 	
+		 	<button><a href="#">CV</a></button>
 		 </div>
 		 <!-- END OF MENU OF THE YEAR -->
 
@@ -89,8 +88,7 @@
 			</div>	
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-					
-					<p class="h6">Copyright © 2020 tous les droits sont réservés Martin DIATTA</p>
+					<p class="h6">Copyright © 2020 tous droits sont réservés Martin DIATTA</p>
 				</div>
 				</hr>
 			</div>	
