--- a/projet09/pages/propos.html
+++ b/projet09/pages/propos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -16,7 +16,7 @@
 	
 
 	<title>propos</title>
-	<link rel="stylesheet" type="text/css" href="propos.css">
+	<link rel="stylesheet" type="text/css" href="../css/propos.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body bgcolor="pink" text="white">
@@ -56,12 +56,10 @@
       	     <div class="butt">   
             <button> <i class=" fa fa-music fa-10% "> </i>Musique</button> <br>
             <button> <i class=" fa fa-book fa-10% "> </i>Lecture</button> <br>
-            <button> <i class=" fa fa-running fa-10% "> </i>Basketball</button> <br>
+            <button> <i class=" fas fa-basketball-ball fa-10% "> </i>Basketball</button> <br>
             <button> <i class=" fa fa-plane fa-10% "> </i>Voyages</button> <br>
             </div> 
       </div>
-
-
 
        <!-- MENU OF THE YEAR -->
 		 <div id="lien">
@@ -94,7 +92,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
 					
-					<p class="h6">Copyright © 2020 tous les droits sont réservés Martin DIATTA</p>
+					<p class="h6">Copyright © 2020 tous droits  réservés Martin DIATTA</p>
 				</div>
 				</hr>
 			</div>	
