--- a/projet09/pages/competences.html
+++ b/projet09/pages/competences.html
@@ -24,20 +24,20 @@
 	</div>
       <table width="50%" align="center" class="comp">
 		<tr>
-			 <td><marquee direction="up"><img src="boots.png" width="40%"> </marquee></td>
-			<td><marquee direction="down"><img src="css.png" width="40%"></marquee></td>
+			 <td><marquee direction="up"><img src="../img/boots.png" width="40%"> </marquee></td>
+			<td><marquee direction="down"><img src="../img/css.png" width="40%"></marquee></td>
 		</tr>
 		<tr>
-			<td><marquee direction="left"><img src="html.png" width="40%"></marquee></td>
-			<td><marquee><img src="ill.png" width="30%"></marquee></td>
+			<td><marquee direction="left"><img src="../img/html.png" width="40%"></marquee></td>
+			<td><marquee><img src="../img/ill.png" width="30%"></marquee></td>
 		</tr>
 		<tr>
-			 <td><marquee direction="up"><img src="js.png" width="40%"> </marquee></td>
-			<td><marquee direction="down"><img src="php.png" width="40%"></marquee></td>
+			 <td><marquee direction="up"><img src="../img/js.png" width="40%"> </marquee></td>
+			<td><marquee direction="down"><img src="../img/php.png" width="40%"></marquee></td>
 		</tr>
 		<tr>
-			<td><marquee direction="left"><img src="ps.jpg" width="40%"></marquee></td>
-			<td><marquee><img src="python.png" width="40%"></marquee></td>
+			<td><marquee direction="left"><img src="../img/ps.jpg" width="40%"></marquee></td>
+			<td><marquee><img src="../img/python.png" width="40%"></marquee></td>
 		</tr>
 
 	</table>
