--- a/projet09/index.html
+++ b/projet09/index.html
@@ -49,7 +49,7 @@
 			<span></span>
 			<span></span>
 		</div>
-		<h2>JE SUIS INFOGRAPHE</h2>
+		<h2>JE SUIS GRAPHIC DESIGNER</h2>
 
 		<div class="loader">
 			<span></span>
@@ -97,7 +97,6 @@
 				</div>
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-
 						<p class="h6">Copyright © 2020 tous  droits réservés Martin DIATTA</p>
 					</div>
 					</hr>
