--- a/projet09/pages/competences.html
+++ b/projet09/pages/competences.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
@@ -18,8 +18,8 @@
 	<div class="best">
 		<h1>WELCOME IN THE WORLD OF SOFTSKILLS!!</h1>
 	    <h2>KEEP CALM AND ADMIRE MY EVOLUTION</h2>
-	    <h3>War of wonderfuls words coded</h3>
-	    <h4>Wonders of world programs</h4>
+	    <h3>WAR OF WONDERFULS WORDS coded</h3>
+	    <h4>WONDERS OF WORLD PROGRAMS</h4>
 
 	</div>
       <table width="50%" align="center" class="comp">
@@ -68,12 +68,10 @@
 		 	<button><a href="#">CV</a></button>
 		 </div>
 		 <!-- END OF MENU OF THE YEAR -->
-
 	<!-- Footer -->
 	<section id="footer">
 		<div class="container">
 			<div class="row text-center text-xs-center text-sm-left text-md-left">
-				
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
 					<ul class="list-unstyled list-inline social text-center">
